--- a/FiveMKoreaServer주식/SDs-FiveM-Config/SqlMap.config
+++ b/FiveMKoreaServer주식/SDs-FiveM-Config/SqlMap.config
@@ -18,7 +18,9 @@
 	</database>
 
 	<sqlMaps>
-			<sqlMap resource="./Shippers.xml" />
+		<!--<sqlMap resource="./Sample.xml" />-->
+    <!--<sqlMap resource="${root}Maps/Account.xml"/>-->
+    <sqlMap embedded="SDs.FiveM.Model.Service.Sample.Maps.AdminUserMap.xml,         SDs.FiveM.Model" />
 	</sqlMaps>
 
 </sqlMapConfig>
