LoginForm / Id & Pw Check Logic Add

--- a/FiveMKoreaServer주식/SDs-FiveM-Config/SqlMap.config
+++ b/FiveMKoreaServer주식/SDs-FiveM-Config/SqlMap.config
@@ -14,13 +14,14 @@
 	<!-- Database connection information -->
 	<database>
     <provider name="MySql"/>
-    <dataSource name="SDsDataSource" connectionString="Data Source=183.109.83.28;Initial Catalog=jusik;Persist Security Info=True;User ID=root;Password=!!wjddk4455"/>
+    <dataSource name="SDsDataSource" connectionString="Data Source=112.171.115.122;Initial Catalog=jusik;Persist Security Info=True;User ID=root;Password=!!wjddk4455"/>
 	</database>
 
 	<sqlMaps>
 		<!--<sqlMap resource="./Sample.xml" />-->
     <!--<sqlMap resource="${root}Maps/Account.xml"/>-->
     <sqlMap embedded="SDs.FiveM.Model.Service.Sample.Maps.AdminUserMap.xml,         SDs.FiveM.Model" />
+    <sqlMap embedded="SDs.FiveM.Model.Service.PublicLoginView.Maps.PublicLoginMap.xml,         SDs.FiveM.Model" />
 	</sqlMaps>
 
 </sqlMapConfig>
