--- a/FiveMKoreaServer주식/SDs-FiveM-View/SDs.FiveM.View.csproj
+++ b/FiveMKoreaServer주식/SDs-FiveM-View/SDs.FiveM.View.csproj
@@ -55,11 +55,47 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\AdminLoginView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\AdminLoginView.Designer.cs">
+      <DependentUpon>AdminLoginView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\AdminView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\AdminView.Designer.cs">
+      <DependentUpon>AdminView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ChargeWithdrawView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ChargeWithdrawView.Designer.cs">
+      <DependentUpon>ChargeWithdrawView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ChartView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ChartView.Designer.cs">
+      <DependentUpon>ChartView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\PublicLoginView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\PublicLoginView.Designer.cs">
+      <DependentUpon>PublicLoginView.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Sample\SampleView.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\Sample\SampleView.Designer.cs">
       <DependentUpon>SampleView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\SignUpView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\SignUpView.Designer.cs">
+      <DependentUpon>SignUpView.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -71,8 +107,14 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="View\PublicLoginView.resx">
+      <DependentUpon>PublicLoginView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Sample\SampleView.resx">
       <DependentUpon>SampleView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\SignUpView.resx">
+      <DependentUpon>SignUpView.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config" />
     <None Include="Properties\Settings.settings">
