AdminLoginView 컨버팅 완료 SignUpView 컨버팅 중

--- a/FiveMKoreaServer주식/SDs-FiveM-Config/SqlMap.config
+++ b/FiveMKoreaServer주식/SDs-FiveM-Config/SqlMap.config
@@ -20,8 +20,10 @@
 	<sqlMaps>
 		<!--<sqlMap resource="./Sample.xml" />-->
     <!--<sqlMap resource="${root}Maps/Account.xml"/>-->
+    
     <sqlMap embedded="SDs.FiveM.Model.Service.Sample.Maps.AdminUserMap.xml,         SDs.FiveM.Model" />
     <sqlMap embedded="SDs.FiveM.Model.Service.PublicLoginView.Maps.PublicLoginMap.xml,         SDs.FiveM.Model" />
+    <sqlMap embedded="SDs.FiveM.Model.Service.AdminLoginView.Maps.AdminLoginMap.xml,         SDs.FiveM.Model" />
 	</sqlMaps>
 
 </sqlMapConfig>
