--- a/FiveMKoreaServer주식/SDs-FiveM-Model/SDs.FiveM.Model.csproj
+++ b/FiveMKoreaServer주식/SDs-FiveM-Model/SDs.FiveM.Model.csproj
@@ -47,10 +47,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Item\AdminLoginView\AdminLoginItem.cs" />
     <Compile Include="Item\PublicLoginView\LoginItem.cs" />
     <Compile Include="Item\Sample\AdminUserItem.cs" />
+    <Compile Include="Param\AdminLoginView\AdminLoginParam.cs" />
     <Compile Include="Param\PublicLoginView\LoginParam.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\FiveMUtilClass.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -72,6 +75,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Service\AdminLoginView\Dao\" />
+    <Folder Include="Service\AdminLoginView\Service\" />
     <Folder Include="Service\PublicLoginView\Dao\" />
     <Folder Include="Service\PublicLoginView\Service\" />
     <Folder Include="Service\Sample\Dao\" />
@@ -84,6 +89,11 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Service\PublicLoginView\Maps\PublicLoginMap.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Service\AdminLoginView\Maps\AdminLoginMap.xml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
