SignUpView 컨버팅 완료

--- a/FiveMKoreaServer주식/SDs-FiveM-Config/SqlMap.config
+++ b/FiveMKoreaServer주식/SDs-FiveM-Config/SqlMap.config
@@ -14,7 +14,7 @@
 	<!-- Database connection information -->
 	<database>
     <provider name="MySql"/>
-    <dataSource name="SDsDataSource" connectionString="Data Source=112.171.115.122;Initial Catalog=jusik;Persist Security Info=True;User ID=root;Password=!!wjddk4455"/>
+    <dataSource name="SDsDataSource" connectionString="Data Source=112.171.115.122;Initial Catalog=vrpfx;Persist Security Info=True;User ID=root;Password=!!wjddk4455"/>
 	</database>
 
 	<sqlMaps>
