--- a/FiveMKoreaServer주식/SDs-FiveM-Config/SqlMap.config
+++ b/FiveMKoreaServer주식/SDs-FiveM-Config/SqlMap.config
@@ -21,7 +21,10 @@
 		<!--<sqlMap resource="./Sample.xml" />-->
     <!--<sqlMap resource="${root}Maps/Account.xml"/>-->
     
+    <!--Sample-->    
     <sqlMap embedded="SDs.FiveM.Model.Service.Sample.Maps.AdminUserMap.xml,         SDs.FiveM.Model" />
+
+    <sqlMap embedded="SDs.FiveM.Model.Service.AdminView.Maps.AdminViewMap.xml,         SDs.FiveM.Model" />
     <sqlMap embedded="SDs.FiveM.Model.Service.PublicLoginView.Maps.PublicLoginMap.xml,         SDs.FiveM.Model" />
     <sqlMap embedded="SDs.FiveM.Model.Service.AdminLoginView.Maps.AdminLoginMap.xml,         SDs.FiveM.Model" />
 	</sqlMaps>
