--- a/FiveMKoreaServer주식/SDs-FiveM-Controller/SDs.FiveM.Controller.csproj
+++ b/FiveMKoreaServer주식/SDs-FiveM-Controller/SDs.FiveM.Controller.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\AdminLoginView\AdminLoginViewController.cs" />
+    <Compile Include="Controller\AdminView\AdminViewController.cs" />
     <Compile Include="Controller\PublicLoginViewController.cs" />
     <Compile Include="Controller\SignUpView\SignUpViewController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
