Feat : ChartView Add
ChartView Add But Server PC is updating ..
So Need to Test about RealTime viewing StockPrice
And
Important " Data exchange test "
                        AdminView <--> ChartView(User)

Resolve : #None
See also : #None

--- a/FiveMKoreaServer주식/SDs-FiveM-View/SDs.FiveM.View.csproj
+++ b/FiveMKoreaServer주식/SDs-FiveM-View/SDs.FiveM.View.csproj
@@ -113,6 +113,9 @@
     <EmbeddedResource Include="View\AdminView.resx">
       <DependentUpon>AdminView.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\ChartView.resx">
+      <DependentUpon>ChartView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\PublicLoginView.resx">
       <DependentUpon>PublicLoginView.cs</DependentUpon>
     </EmbeddedResource>
