Feat : ChartView Add
ChartView Added <Buy Function>
Need to Test

Resolve : #None
See also : #None

--- a/FiveMKoreaServer주식/SDs-FiveM-Config/SqlMap.config
+++ b/FiveMKoreaServer주식/SDs-FiveM-Config/SqlMap.config
@@ -14,7 +14,7 @@
 	<!-- Database connection information -->
 	<database>
     <provider name="MySql"/>
-    <dataSource name="SDsDataSource" connectionString="Data Source=112.171.115.122;Initial Catalog=vrpfx;Persist Security Info=True;User ID=root;Password=!!wjddk4455"/>
+    <dataSource name="SDsDataSource" connectionString="Data Source=183.109.83.28;Initial Catalog=vrpfx;Persist Security Info=True;User ID=root;Password=!!wjddk4455"/>
 	</database>
 
 	<sqlMaps>
@@ -24,6 +24,7 @@
     <!--Sample-->    
     <sqlMap embedded="SDs.FiveM.Model.Service.Sample.Maps.AdminUserMap.xml,         SDs.FiveM.Model" />
 
+    <sqlMap embedded="SDs.FiveM.Model.Service.ChartView.Maps.ChartViewMap.xml,         SDs.FiveM.Model" />
     <sqlMap embedded="SDs.FiveM.Model.Service.AdminView.Maps.AdminViewMap.xml,         SDs.FiveM.Model" />
     <sqlMap embedded="SDs.FiveM.Model.Service.PublicLoginView.Maps.PublicLoginMap.xml,         SDs.FiveM.Model" />
     <sqlMap embedded="SDs.FiveM.Model.Service.AdminLoginView.Maps.AdminLoginMap.xml,         SDs.FiveM.Model" />
