--- a/FiveMKoreaServer주식/SDs-FiveM-Model/SDs.FiveM.Model.csproj
+++ b/FiveMKoreaServer주식/SDs-FiveM-Model/SDs.FiveM.Model.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Item\AdminLoginView\AdminLoginItem.cs" />
     <Compile Include="Item\AdminView\AdminViewItem.cs" />
+    <Compile Include="Item\ChartView\UserCompanyBuyItem.cs" />
     <Compile Include="Item\PublicLoginView\LoginItem.cs" />
     <Compile Include="Item\Sample\AdminUserItem.cs" />
     <Compile Include="Param\AdminLoginView\AdminLoginParam.cs" />
@@ -81,6 +82,8 @@
     <Folder Include="Service\AdminLoginView\Service\" />
     <Folder Include="Service\AdminView\Dao\" />
     <Folder Include="Service\AdminView\Service\" />
+    <Folder Include="Service\ChartView\Dao\" />
+    <Folder Include="Service\ChartView\Service\" />
     <Folder Include="Service\PublicLoginView\Dao\" />
     <Folder Include="Service\PublicLoginView\Service\" />
     <Folder Include="Service\Sample\Dao\" />
@@ -103,6 +106,11 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Service\AdminView\Maps\AdminViewMap.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Service\ChartView\Maps\ChartViewMap.xml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
