Feat : ChartView Add
ChartView Added <Sell Function>
 + Bug Fix
 + Prcess Message Box
Need to Test

Resolve : #None
See also : #None

--- a/FiveMKoreaServer주식/SDs-FiveM-Model/SDs.FiveM.Model.csproj
+++ b/FiveMKoreaServer주식/SDs-FiveM-Model/SDs.FiveM.Model.csproj
@@ -49,7 +49,8 @@
   <ItemGroup>
     <Compile Include="Item\AdminLoginView\AdminLoginItem.cs" />
     <Compile Include="Item\AdminView\AdminViewItem.cs" />
-    <Compile Include="Item\ChartView\UserCompanyBuyItem.cs" />
+    <Compile Include="Item\ChartView\HistoryItem.cs" />
+    <Compile Include="Item\ChartView\UserCompanyItem.cs" />
     <Compile Include="Item\PublicLoginView\LoginItem.cs" />
     <Compile Include="Item\Sample\AdminUserItem.cs" />
     <Compile Include="Param\AdminLoginView\AdminLoginParam.cs" />
