Feat : ViewName #ChartWithdrawView #
ChartWithdrawView (충전 및 출금) Add
When I develop "tbxGameMoney / Refill Button" , i found something wrong process
So i asked a question to PM(정창민)

Resolve : #None
See also : #None

--- a/FiveMKoreaServer주식/SDs-FiveM-Config/SqlMap.config
+++ b/FiveMKoreaServer주식/SDs-FiveM-Config/SqlMap.config
@@ -28,6 +28,7 @@
     <sqlMap embedded="SDs.FiveM.Model.Service.AdminView.Maps.AdminViewMap.xml,         SDs.FiveM.Model" />
     <sqlMap embedded="SDs.FiveM.Model.Service.PublicLoginView.Maps.PublicLoginMap.xml,         SDs.FiveM.Model" />
     <sqlMap embedded="SDs.FiveM.Model.Service.AdminLoginView.Maps.AdminLoginMap.xml,         SDs.FiveM.Model" />
+    <sqlMap embedded="SDs.FiveM.Model.Service.ChargeWithdrawView.Maps.ChargeWithdrawViewMap.xml,         SDs.FiveM.Model" />
 	</sqlMaps>
 
 </sqlMapConfig>
