--- a/FiveMKoreaServer주식/SDs-FiveM-Controller/SDs.FiveM.Controller.csproj
+++ b/FiveMKoreaServer주식/SDs-FiveM-Controller/SDs.FiveM.Controller.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Controller\AdminLoginView\AdminLoginViewController.cs" />
     <Compile Include="Controller\AdminView\AdminViewController.cs" />
+    <Compile Include="Controller\ChargeWithdrawView\ChargeWithdrawViewController.cs" />
     <Compile Include="Controller\ChartView\ChartViewController.cs" />
     <Compile Include="Controller\PublicLoginViewController.cs" />
     <Compile Include="Controller\SignUpView\SignUpViewController.cs" />
