--- a/FiveMKoreaServer주식/SDs-FiveM-View/SDs.FiveM.View.csproj
+++ b/FiveMKoreaServer주식/SDs-FiveM-View/SDs.FiveM.View.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\AdminChargeWithdrawView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\AdminChargeWithdrawView.Designer.cs">
+      <DependentUpon>AdminChargeWithdrawView.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\AdminLoginView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +114,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="View\AdminChargeWithdrawView.resx">
+      <DependentUpon>AdminChargeWithdrawView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\AdminLoginView.resx">
       <DependentUpon>AdminLoginView.cs</DependentUpon>
     </EmbeddedResource>
