Feat : ViewName #ChargeWithdrawView#
ChargeWithdrawView
 - Complete Develop

Resolve : #None
See also : #None

--- a/FiveMKoreaServer주식/SDs-FiveM-Model/SDs.FiveM.Model.csproj
+++ b/FiveMKoreaServer주식/SDs-FiveM-Model/SDs.FiveM.Model.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Constants\FiveMConstants.cs" />
     <Compile Include="Item\AdminLoginView\AdminLoginItem.cs" />
     <Compile Include="Item\AdminView\AdminViewItem.cs" />
+    <Compile Include="Item\ChargeWithdrawView\RefillMoneyApplicationItem.cs" />
     <Compile Include="Item\ChartView\HistoryItem.cs" />
     <Compile Include="Item\ChartView\UserCompanyItem.cs" />
     <Compile Include="Item\PublicLoginView\LoginItem.cs" />
