--- a/FiveMKoreaServer주식/SDs-FiveM-Controller/SDs.FiveM.Controller.csproj
+++ b/FiveMKoreaServer주식/SDs-FiveM-Controller/SDs.FiveM.Controller.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\AdminChargeWithdrawView\AdminChargeWithdrawViewController.cs" />
     <Compile Include="Controller\AdminLoginView\AdminLoginViewController.cs" />
     <Compile Include="Controller\AdminView\AdminViewController.cs" />
     <Compile Include="Controller\ChargeWithdrawView\ChargeWithdrawViewController.cs" />
