--- a/FiveMKoreaServer주식/SDs-FiveM-Config/SqlMap.config
+++ b/FiveMKoreaServer주식/SDs-FiveM-Config/SqlMap.config
@@ -20,7 +20,6 @@
 	<sqlMaps>
 		<!--<sqlMap resource="./Sample.xml" />-->
     <!--<sqlMap resource="${root}Maps/Account.xml"/>-->
-    
     <!--Sample-->    
     <sqlMap embedded="SDs.FiveM.Model.Service.Sample.Maps.AdminUserMap.xml,         SDs.FiveM.Model" />
 
@@ -29,6 +28,7 @@
     <sqlMap embedded="SDs.FiveM.Model.Service.PublicLoginView.Maps.PublicLoginMap.xml,         SDs.FiveM.Model" />
     <sqlMap embedded="SDs.FiveM.Model.Service.AdminLoginView.Maps.AdminLoginMap.xml,         SDs.FiveM.Model" />
     <sqlMap embedded="SDs.FiveM.Model.Service.ChargeWithdrawView.Maps.ChargeWithdrawViewMap.xml,         SDs.FiveM.Model" />
-	</sqlMaps>
+    <sqlMap embedded="SDs.FiveM.Model.Service.AdminChargeWithdrawView.Maps.AdminChargeWithdrawViewMap.xml,         SDs.FiveM.Model" />
+  </sqlMaps>
 
 </sqlMapConfig>
