--- a/FiveMKoreaServer주식/SDs-FiveM-View/SDs.FiveM.View.csproj
+++ b/FiveMKoreaServer주식/SDs-FiveM-View/SDs.FiveM.View.csproj
@@ -119,6 +119,12 @@
     <Compile Include="View\ChartView.Designer.cs">
       <DependentUpon>ChartView.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\Lotto\LottoMakerView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Lotto\LottoMakerView.Designer.cs">
+      <DependentUpon>LottoMakerView.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\PublicLoginView.cs">
       <SubType>Form</SubType>
     </Compile>
