--- a/FiveMKoreaServer주식/SDs-FiveM-Config/SqlMap.config
+++ b/FiveMKoreaServer주식/SDs-FiveM-Config/SqlMap.config
@@ -23,6 +23,7 @@
     <!--Sample-->    
     <sqlMap embedded="SDs.FiveM.Model.Service.Sample.Maps.AdminUserMap.xml,         SDs.FiveM.Model" />
 
+    <sqlMap embedded="SDs.FiveM.Model.Service.Lotto.LottoMakerView.Maps.LottoMakerViewMap.xml,         SDs.FiveM.Model" />
     <sqlMap embedded="SDs.FiveM.Model.Service.ChartView.Maps.ChartViewMap.xml,         SDs.FiveM.Model" />
     <sqlMap embedded="SDs.FiveM.Model.Service.AdminView.Maps.AdminViewMap.xml,         SDs.FiveM.Model" />
     <sqlMap embedded="SDs.FiveM.Model.Service.PublicLoginView.Maps.PublicLoginMap.xml,         SDs.FiveM.Model" />
