--- a/FiveMKoreaServer주식/SDs-FiveM-Controller/SDs.FiveM.Controller.csproj
+++ b/FiveMKoreaServer주식/SDs-FiveM-Controller/SDs.FiveM.Controller.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Controller\AdminView\AdminViewController.cs" />
     <Compile Include="Controller\ChargeWithdrawView\ChargeWithdrawViewController.cs" />
     <Compile Include="Controller\ChartView\ChartViewController.cs" />
+    <Compile Include="Controller\Lotto\LottoMakerView\LottoMakerViewController.cs" />
     <Compile Include="Controller\PublicLoginViewController.cs" />
     <Compile Include="Controller\SignUpView\SignUpViewController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
