--- a/FiveMKoreaServer주식/SDs-FiveM-View/App.config
+++ b/FiveMKoreaServer주식/SDs-FiveM-View/App.config
@@ -5,7 +5,7 @@
   </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <probing privatePath="Database"/>
+      <probing privatePath="dll"/>
     </assemblyBinding>
   </runtime>
 </configuration>
