--- a/FiveMKoreaServer주식/SDs-FiveM-Model/SDs.FiveM.Model.csproj
+++ b/FiveMKoreaServer주식/SDs-FiveM-Model/SDs.FiveM.Model.csproj
@@ -59,7 +59,11 @@
     <Compile Include="Param\AdminLoginView\AdminLoginParam.cs" />
     <Compile Include="Param\PublicLoginView\LoginParam.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Setting\FiveMConfig.cs" />
+    <Compile Include="Setting\FiveMConfigXMLHandler.cs" />
     <Compile Include="Util\FiveMUtilClass.cs" />
+    <Compile Include="Util\PathUtil.cs" />
+    <Compile Include="Util\XmlUtil.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
