--- a/FiveMKoreaServer주식/SDs-FiveM-View/SDs.FiveM.View.csproj
+++ b/FiveMKoreaServer주식/SDs-FiveM-View/SDs.FiveM.View.csproj
@@ -150,6 +150,12 @@
     <Compile Include="View\SignUpView.Designer.cs">
       <DependentUpon>SignUpView.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\UserChartView\UserJuCountView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\UserChartView\UserJuCountView.Designer.cs">
+      <DependentUpon>UserJuCountView.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -189,6 +195,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\SignUpView.resx">
       <DependentUpon>SignUpView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\UserChartView\UserJuCountView.resx">
+      <DependentUpon>UserJuCountView.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config" />
     <None Include="Properties\Settings.settings">
